# AI_Agents

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  testing.ipynb
advanced_agent/: advanced_agent.py  pyproject.toml
advanced_agent/src/: firecrawl.py  models.py  prompts.py  workflow.py
simple_agent/: main.py  pyproject.toml
